update apartment.com scraping tool
source: https://github.com/adinutzyc21/apartments-scraper

--- a/apartment_com/config.ini
+++ b/apartment_com/config.ini
@@ -3,7 +3,7 @@
 
 # this is the URL of the apartments.com listing with whatever search criteria you have (1 bedroom, size, commute distance, sorted by preference)
 # You can provide one or more URLs in a comma-separated list
-apartmentsURL: (https://www.apartments.com/ - fill me out)
+apartmentsURL: (https://www.apartments.com/off-campus-housing/ca/la-jolla/university-of-california-san-diego-main-campus/)
 
 # the Google Maps API URL base. See more options here: https://developers.google.com/maps/documentation/distance-matrix/
 mapsURL: https://maps.googleapis.com/maps/api/distancematrix/json?
@@ -31,4 +31,4 @@ evening: 5:00 PM
 printScores: false
 
 # the name of the CSV file to write to
-fname: output
+fname: apartment_com_output
