--- a/apartment_com/config.ini
+++ b/apartment_com/config.ini
@@ -3,7 +3,7 @@
 
 # this is the URL of the apartments.com listing with whatever search criteria you have (1 bedroom, size, commute distance, sorted by preference)
 # You can provide one or more URLs in a comma-separated list
-apartmentsURL: (https://www.apartments.com/off-campus-housing/ca/la-jolla/university-of-california-san-diego-main-campus/)
+apartmentsURL: https://www.apartments.com/off-campus-housing/ca/la-jolla/university-of-california-san-diego-main-campus/
 
 # the Google Maps API URL base. See more options here: https://developers.google.com/maps/documentation/distance-matrix/
 mapsURL: https://maps.googleapis.com/maps/api/distancematrix/json?
